# melt

./: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  PLAN.md  README.md  biome.json  bun.nix  bundle.ts  bunfig.toml  default.nix  devenv.nix  flake.nix  opencode.json  package-lock.json  package.json  release.config.js  tsconfig.json
.github/workflows/: ci.yml  nix.yml  release.yml  update-deps.yml  update-nix-hashes.yml
.opencode/: oh-my-opencode.json
docs/: smoke-testing.md
nix/: bundle.ts  hashes.json  melt.nix  node-modules.nix
nix/scripts/: canonicalize-node-modules.ts  normalize-bun-binaries.ts  update-hashes.sh
scripts/: bump-cargo-version.js
specs/: pure-architecture-rewrite-spec.md
src/: App.tsx  app.rs  cli.ts  config.rs  error.rs  event.rs  index.tsx  lib.rs  logging.rs  main.rs  policy.rs  runtime.ts  shutdown.ts  theme.ts  tui.rs
src/app/: AGENTS.md  effects.rs  handler.rs  mod.rs  ports.rs  reducer.rs  state.rs  status.rs
src/components/: App.tsx  Changelog.tsx  ConfirmDialog.tsx  ErrorDialog.tsx  FlakeList.tsx  HelpBar.tsx  StatusBar.tsx
src/config/: shortcuts.ts
src/context/: AppContext.tsx  ChangelogContext.tsx
src/hooks/: createFlakeLogic.ts  useFlakeActions.ts  useScrollSync.ts
src/lib/: cli.ts  flake.ts  github.ts  theme.ts  time.ts  types.ts
src/model/: commit.rs  domain.rs  flake.rs  mod.rs  status.rs  url.rs
src/service/: AGENTS.md  git.rs  mod.rs  nix.rs  traits.rs
src/services/: flake.ts  github.ts  processManager.ts  time.ts  toast.ts
src/stores/: flakeStore.ts
src/types/: errors.ts  index.ts
src/ui/: theme.rs
src/util/: text.rs  time.rs
src/views/: ChangelogView.tsx  ListView.tsx
test-data/all-forges/: flake.nix
test-data/dev-tools/: flake.nix
test-data/github-heavy/: flake.nix
test-data/kitchen-sink/: flake.nix
test-data/minimal/: flake.nix
tests/: adapter_contract_tests.rs  integration_tests.rs  reducer_tests.rs  state_tests.rs
(+15 files in other folders)
