[package]
name = "melt"
version = "0.1.0"
edition = "2021"
description = "A TUI for managing Nix flake inputs"
license = "MIT"
repository = "https://github.com/mholtzscher/melt"
keywords = ["nix", "flake", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git
git2 = "0.19"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = "0.4"

# Paths
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
